--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<title>Fibonacci Series</title>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="main.css">
+	<script async defer src="https://buttons.github.io/buttons.js"></script>
 </head>
 <body>
 	<header class="mdc-top-app-bar">
@@ -55,8 +56,11 @@
 		<div id="result"></div>
 	</div>
 	<footer>
-		Program to calculate Fibonacci Series of numbers. Created by <a href="https://cubetastic.herokuapp.com">cubetastic</a>.
 		<div>
+			<p>Program to calculate Fibonacci Series of numbers. Created by <a href="https://cubetastic.herokuapp.com">cubetastic</a>.</p>
+			<a class="github-button" href="https://github.com/cubetastic33/fibonacci" data-show-count="true" aria-label="Star cubetastic33/fibonacci on GitHub">Star</a>
+		</div>
+		<div class="footer-copyright">
 			© 2018 | Cubetastic
 		</div>
 	</footer>
